refactor: implement integration tests
1.  **Error Differentiation:** The system now clearly distinguishes between:
    -   **Business Errors** (e.g., User Not Found), which now result in a `400 Bad Request`.
    -   **System Failures** (e.g., service timeout, 5xx errors), which now result in a `503 Service Unavailable`.

2.  **"Fail Fast" API Strategy:**
    -   All read operations (like `getOrder`) will now correctly fail with a 503 error if user-service is down, rather than returning a misleading 200 OK with partial data.